examples/test/testpolicy15915.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15915
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key34: value25
      key38: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value4
          key49: value24
          key6: value32
      podSelector:
        matchLabels:
          key24: value11
          key9: value49
